# planetary-system-simulator

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  test_runner
.github/workflows/: main.yml
src/: celestial.cpp  celestial.hpp  controller.cpp  controller.hpp  physics.cpp  physics.hpp
tests/: test_controller.cpp  test_physics.cpp
